--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "typecheck": "tsc",
     "build": "node build.js",
     "gc": "yarn build && node index.js",
-    "test": "jest"
+    "test": "jest --runInBand",
+    "lint": "eslint --ext .ts,.js src"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
@@ -16,6 +17,7 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
@@ -23,7 +25,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
+    "chalk": "4.1.2",
     "commander": "^9.0.0",
     "esbuild": "^0.14.21"
   }
