--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .ts,.js src"
   },
   "devDependencies": {
+    "@jest/globals": "^27.5.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
