--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "gc",
-  "version": "1.0.0",
+  "name": "gc-react",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
+  "description": "React component generator",
+  "bin": {
+    "gc": "./index.js"
+  },
   "scripts": {
     "typecheck": "tsc",
     "build": "node build.js",
