--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gc-react",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "index.js",
   "license": "MIT",
   "description": "React component generator",
@@ -20,6 +20,7 @@
     "@types/node": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "esbuild": "^0.14.21",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -31,7 +32,6 @@
   },
   "dependencies": {
     "chalk": "4.1.2",
-    "commander": "^9.0.0",
-    "esbuild": "^0.14.21"
+    "commander": "^9.0.0"
   }
 }
