--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
   },
   "lib": ["es2015"],
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/create/template/**/*"]
+  "exclude": ["node_modules", "dist", "src/core/create/template/**/*"]
 }
