--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "noImplicitAny": false
   },
   "lib": ["es2015"],
   "include": ["src/**/*"],
